# game_design

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake  main.cpp  my_game
classifier/: armor_classifier.h  e_creature_categories.h  human_classifier.cpp  human_classifier.h  i_classifier.h  i_material_classifier.h  i_property_classifier.h  weapon_classifier.cpp  weapon_classifier.h
classifier/inc/: armor_classifier.h  armor_classifier.hpp  e_creature_categories.h  e_item_categories.h  e_obstacle_categories.h  human_classifier.h  i_class_classifier.h  i_classifier.h  i_classifier.hpp  i_material_classifier.hpp  i_property_classifier.h  i_type_classifier.h  jewerly_classifier.h  jewerly_classifier.hpp  monster_classifier.h  potion_classifier.h  rock_classifier.h  rock_classifier.hpp  terrain_classifier.h  terrain_classifier.hpp  tree_classifier.h  weapon_classifier.h  weapon_classifier.hpp
classifier/src/: armor_classifier.cpp  human_classifier.cpp  jewerly_classifier.cpp  monster_classifier.cpp  potion_classifier.cpp  rock_classifier.cpp  terrain_classifier.cpp  tree_classifier.cpp  weapon_classifier.cpp
database/: pg_tester.cpp  pg_tester.hpp
domain/classifier/inc/: armor_classifier.hpp  e_creature_categories.hpp  e_item_categories.hpp  e_obstacle_categories.hpp  human_classifier.hpp  i_class_classifier.hpp  i_classifier.hpp  i_material_classifier.hpp  i_property_classifier.hpp  i_type_classifier.hpp  jewerly_classifier.hpp  monster_classifier.hpp  potion_classifier.hpp  rock_classifier.hpp  terrain_classifier.hpp  tree_classifier.hpp  weapon_classifier.hpp
domain/classifier/src/: human_classifier.cpp  rock_classifier.cpp  terrain_classifier.cpp  weapon_classifier.cpp
domain/creature/inc/: human.hpp  i_action.hpp  i_behavior.hpp  i_creature.hpp  i_inventory.hpp
domain/creature/src/: human.cpp
domain/factory/inc/: armor_factory.hpp  i_classifier_factory.hpp  i_creature_factory.hpp  i_factory.hpp  i_item_factory.hpp  i_obstacle_factory.hpp  i_params_factory.hpp  potion_factory.hpp  weapon_factory.hpp
domain/factory/src/: armor_factory.cpp  potion_factory.cpp  weapon_factory.cpp
domain/item/inc/: armor.hpp  i_durable_item.hpp  i_item.hpp  potion.hpp  weapon.hpp
domain/item/src/: potion.cpp  weapon.cpp
domain/item_container/inc/: e_body_containers.hpp
domain/object/: i_object.hpp
domain/params/inc/: e_params_categories.hpp  i_exp_params.hpp  i_hit_params.hpp  i_life_params.hpp  i_main_params.hpp  i_move_params.hpp  i_params.hpp  i_pos_params.hpp  params.hpp
domain/random/: randomizer.cpp  randomizer.hpp
factory/inc/: armor_factory.h  armor_factory.hpp  i_classifier_factory.h  i_classifier_factory.hpp  i_creature_factory.h  i_factory.h  i_item_factory.h  i_obstacle_factory.h  i_obstacle_factory.hpp  i_params_factory.h  i_params_factory.hpp  potion_factory.hpp  weapon_factory.h  weapon_factory.hpp
factory/src/: armor_factory.cpp  weapon_factory.cpp
item/inc/: armor.h  i_durable_item.h  i_durable_item.hpp  i_item.h  potion.h  potion.hpp  weapon.h  weapon.hpp
item/src/: armor.cpp  potion.cpp  weapon.cpp
object/: i_object.h  i_object.hpp
params/inc/: e_params_categories.h  i_exp_params.h  i_hit_params.h  i_hit_params.hpp  i_life_params.h  i_life_params.hpp  i_main_params.h  i_main_params.hpp  i_move_params.h  i_move_params.hpp  i_params.h  i_pos_params.h  i_pos_params.hpp  params.h  params.hpp
params/src/: params.cpp
random/: randomizer.cpp  randomizer.h  randomizer.hpp
(+4 files in other folders)
